[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/AstroBody.gd" type="Script" id=1]

[sub_resource type="StreamTexture" id=3]
flags = 4
load_path = "res://.import/planet_1.png-fba2fbc4ee401cde4760613ece68e566.stex"

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="CircleShape2D" id=2]
radius = 447.214

[node name="AstroBody" type="Node2D"]
rotation = 266.237
script = ExtResource( 1 )
texture = SubResource( 3 )

[node name="CollisionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionArea"]
shape = SubResource( 1 )

[node name="InfluenceArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InfluenceArea"]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]

[connection signal="area_entered" from="CollisionArea" to="." method="_on_CollisionArea_area_entered"]
[connection signal="area_exited" from="CollisionArea" to="." method="_on_CollisionArea_area_exited"]
[connection signal="area_entered" from="InfluenceArea" to="." method="_on_InfluenceArea_area_entered"]
[connection signal="area_exited" from="InfluenceArea" to="." method="_on_InfluenceArea_area_exited"]
